# nightforge

./: .gitignore  AGENTS.md  AGENTS.pi.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  TROUBLESHOOTING.md
.claude/commands/: investigate.md  review.md
.github/workflows/: ci.yml
assets/screenshots/: operator-terminal-disk-warning
dashboard-ctl/: c2.go  container.go  go.mod  main.go  network.go  service.go  tmux.go  vm.go
docs/: INSTALL.md  NEXT_SESSION.md  NIGHTFORGE-SHELL-MIGRATION.md  SYSTEM-CONFIGURATION.md  tools-inventory.md
dotfiles/ghostty/: config
dotfiles/hermes/: SOUL.md
dotfiles/mem0/: config.json
dotfiles/pi/: persona.md
dotfiles/waterfox/: README.md  user.js
dotfiles/zed/: keymap.json  settings.json
lat.md/: lat.md
modules/niri/: README.md
nightforge-tui/: Cargo.toml
nightforge-tui/src/: app.rs  main.rs  poller.rs  theme.rs
nightforge-tui/src/tabs/: dashboard.rs  mod.rs  monitor.rs  network.rs  osint.rs  sessions.rs
nightforge-tui/src/widgets/: gauge.rs  table.rs
niri-modifications/: README.md  local.kdl.example
niri-modifications/outputs/: main.go
niri-modifications/scripts/: keybinds-parser.sh  lock-screen.sh  rotate-wallpaper.sh  startups-parser.sh
scripts/: deploy.sh  focus-or-spawn.sh  matugen-sync.sh  quickshell-toggle-daemon.sh
scripts/maintenance/: weekly-cleanup.sh
scripts/niri-outputs/: niri-outputs
scripts/qs-watcher/: go.mod  main.go  qs-watcher
scripts/recon/: recon-pipeline-v2.sh  recon-pipeline-v3.sh
scripts/security/: security-status.sh
session-tracker/: Cargo.toml
(+40 files in other folders)
