[package]
name = "nightforge-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3"
tui-globe = "1.0.0"
